add site header html and css

--- a/index.html
+++ b/index.html
@@ -5,11 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marvel Coffee Roasters || Seryozniy sayt 18+</title>
+    <link rel="shortcut icon" href="./images/site-title-logo.svg" type="image/x-icon">
     <!-- STYLES CSS -->
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    
+    <!-- HEADER AND HERO WRAPPER -->
+    <div class="header-and-hero-wrapper">
+
+        <!-- SITE HEADER -->
+        <header class="site-header">
+            <div class="container site-header-container">
+                <a class="site-header-logo-link" href="./index.html">
+                    <img class="site-header-logo-img" src="./images/site-logo.svg" alt="site-logo" width="235" height="24">
+                </a>
+                <!-- SITENAV -->
+                <nav class="sitenav">
+                    <ul class="sitenav-list">
+                        <li class="sitenav-list-item"><a class="sitenav-item-link" href="#">HOME</a></li>
+                        <li class="sitenav-list-item"><a class="sitenav-item-link" href="#">ABOUT US</a></li>
+                        <li class="sitenav-list-item"><a class="sitenav-item-link" href="#">Create your plan</a></li>
+                    </ul>
+                </nav>
+                <!-- SITENAV END -->
+            </div>
+        </header>
+        <!-- SITE HEADER END -->
+
+    </div>
+    <!-- HEADER AND HERO WRAPPER -->
 </body>
 </html>
