add site hero section html and css

--- a/index.html
+++ b/index.html
@@ -33,6 +33,22 @@
         </header>
         <!-- SITE HEADER END -->
 
+        <!-- HERO SECTION STYLES -->
+        <div class="hero">
+            <div class="container hero-container">
+                <div class="hero-text-wrapper">
+                    <h1 class="hero-title">Good coffee<br> is made simply.</h1>
+                    <p class="hero-text">Start your mornings with the world’s best coffees. Try our expertly curated artisan coffees from our best roasters delivered directly to your door, at your schedule.</p>
+                    <a class="site-btn green-btn" href="#">Create your plan</a>
+                </div>
+                <div class="hero-img-wrapper">
+                    <img class="hero-round-img" src="./images/hero-round-img.png" alt="hero-round-img" srcset="./images/hero-round-img.png 1x, ./images/hero-round-img@2x.png 2x" width="214" height="214">
+                    <img class="hero-index-img" src="./images/hero-index-img.jpg" alt="hero-index-img" srcset="./images/hero-index-img.jpg 1x, ./images/hero-index-img@2x.jpg 2x" width="710" height="696">
+                </div>
+            </div>
+        </div>
+        <!-- HERO SECTION STYLES END -->
+
     </div>
     <!-- HEADER AND HERO WRAPPER -->
 </body>
